modify store image and create docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
+server.port=8080
 
 #Config MySQL database
-spring.datasource.url = jdbc:mysql://localhost:3306/travel_planner
-spring.datasource.username = root
-spring.datasource.password = 123456
+#spring.datasource.url = jdbc:mysql://localhost:3306/travel_planner
+#spring.datasource.username = root
+#spring.datasource.password = 123456
+
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?createDatabaseIfNotExist=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 logging.level.org.springframework.security=DEBUG
 
@@ -20,3 +27,7 @@ spring.mail.username=tuenguyen29102001@gmail.com
 spring.mail.password=tzoannsxfqcwpvpw
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Config swagger ui
+springdoc.api-docs.path=/test/api-docs
+
