--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port=8080
 
 #Config MySQL database
-#spring.datasource.url = jdbc:mysql://localhost:3306/travel_planner
-#spring.datasource.username = root
-#spring.datasource.password = 123456
+spring.datasource.url = jdbc:mysql://localhost:3306/travel_planner
+spring.datasource.username = root
+spring.datasource.password = 123456
 
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?createDatabaseIfNotExist=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?createDatabaseIfNotExist=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.username=${DB_USER}
+#spring.datasource.password=${DB_PASSWORD}
 
 
 # Hibernate ddl auto (create, create-drop, validate, update)
