--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,7 @@ springdoc.api-docs.path=/test/api-docs
 springdoc.swagger-ui.path=/test/api-doc-travel-planner
 
 #spring.jackson.serialization.write_dates_as_timestamps=false
+
+#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
